# git

./: .gitignore  Dockerfile  README.md  Taskfile.yaml  go.mod  go.sum  main.go  production.Dockerfile  sample.env  swagger.sh
docs/: docs.go  swagger.json  swagger.yaml
internal/bip/: blocks.go
internal/configs/: configs.go
internal/constants/: constants.go
internal/controllers/: attribution.go  branch.go  log.go  mergereq.go  snapshot.go
internal/libgit/: attribution.go  branch.go  logs.go  mergereq.go  readWriteBlocks.go  repo.go
internal/middlewares/: middleware.go
internal/models/: attribution.go  blocksv1.go  blocksv2.go  logs.go  swagger.go
internal/server/: router.go
internal/utils/: utils.go
libgit2-backends/: Readme.md
libgit2-backends/CMake/: FindLibpq.cmake
libgit2-backends/postgres/: CMakeLists.txt  postgres.c
